--- a/upload-server/docker-compose.e2e.azurite.yml
+++ b/upload-server/docker-compose.e2e.azurite.yml
@@ -40,8 +40,10 @@ services:
       - CI
       - SERVER_URL=http://upload-server-azurite:8080
       - UI_URL=http://upload-server-azurite:8081
-      - TEST_REPORTS_DIR=${TEST_REPORTS_DIR:-/playwright/test-reports/azure-to-azure/}
-      - TEST_RESULTS_DIR=${TEST_RESULTS_DIR:-/playwright/test-results/azure-to-azure/}
+      - TEST_REPORTS_DIR=/playwright/test-reports
+      - BLOB_REPORT_FILE=${BLOB_REPORT_FILE:-blob-reports/azure-report.zip}
+      - HTML_REPORT_DIR=${HTML_REPORT_DIR:-azure-html}
+      - JSON_REPORT_FILE=${JSON_REPORT_FILE:-azure-report.json}
     command: npm run test:docker
     networks:
       - e2e-azurite-network
