--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,21 +1,18 @@
 name: 'Playwright Tests'
 
 on:
-  workflow_call:
-    inputs:
-      BRANCH_NAME:
-        type: string
-        required: true
-      RUN_ID:
-        type: number
-        required: true
+  workflow_dispatch:
+  pull_request:
+    paths:
+      - upload-server/**
+      - tests/**
 
 defaults:
   run:
     working-directory: upload-server/
 
 jobs:
-  run-tests:
+  e2e-tests:
     strategy:
       max-parallel: 2
       matrix:
@@ -72,7 +69,7 @@ jobs:
 
   generate-report:
     name: Generate HTML Report from Blob Reports
-    needs: [run-tests]
+    needs: [e2e-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Playwright Files
@@ -109,6 +106,5 @@ jobs:
     uses: ./.github/workflows/push-to-gh-pages.yml
     with:
       ARTIFACT_ID: playwright-report
-      DEPLOY_TO: playwright-reports/${{ inputs.BRANCH_NAME }}/${{ inputs.RUN_ID }}/
-      COMMIT_MSG:
-        'add HTML report for branch ${{ inputs.BRANCH_NAME }}, run-id ${{ inputs.RUN_ID }}'
+      DEPLOY_TO: playwright-reports/${{ github.ref_name }}/${{ github.run_id }}/
+      COMMIT_MSG: 'add HTML report for branch ${{ github.ref_name }}, run-id ${{ github.run_id }}'
