--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -38,7 +38,7 @@ jobs:
       CI: true
       AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
       # The compose file sends this variable into the Playwright configs
-      BLOB_REPORT_FILE: ${{ matrix.name }}-report.zip
+      HTML_REPORT_DIR: ${{ matrix.name }}-html
     steps:
       - uses: actions/checkout@v4
       - name: Install podman compose
@@ -54,12 +54,17 @@ jobs:
         run:
           podman-compose -f ${{ matrix.compose }} logs -f playwright | perl -pe
           's/::(debug|notice|warning|error) title=/$&\[${{ matrix.title }}\] /g'
+      - name: Rename Report
+        working-directory: tests/smoke/playwright/test-reports
+        run: |
+          mv ${{ env.HTML_REPORT_DIR }}/index.html ${{ matrix.name }}.html
+          rm -rf ${{ env.HTML_REPORT_DIR }}
       - name: Upload Playwright Reports
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report-${{ matrix.name }}
-          path: tests/smoke/playwright/test-reports/${{ env.BLOB_REPORT_FILE }}
+          path: tests/smoke/playwright/test-reports/${{ matrix.name }}.html
           retention-days: 1
       - name: Tear Down Containers
         run: podman-compose -f ${{ matrix.compose }} down
@@ -81,21 +86,16 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           pattern: playwright-report-*
-          path: tests/smoke/playwright/blob-reports
+          path: tests/smoke/playwright/test-reports
           merge-multiple: true
-      - name: Install Playwright
-        working-directory: tests/smoke/playwright
-        run: npm ci
       - name: Merge Blobs Reports into HTML Report
         working-directory: tests/smoke/playwright
-        env:
-          HTML_REPORT_DIR: ./html-report
-        run: npx playwright merge-reports --config=merge.config.ts ./blob-reports
+        run: node merge-html-reports.js
       - name: Upload HTML Reprot
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: tests/smoke/playwright/html-report
+          path: tests/smoke/playwright/test-reports
           retention-days: 1
   publish:
     needs: [generate-report]
