--- a/upload-server/docker-compose.e2e.azurite.yml
+++ b/upload-server/docker-compose.e2e.azurite.yml
@@ -43,6 +43,8 @@ services:
       - TEST_REPORTS_DIR=/playwright/test-reports
       - HTML_REPORT_DIR=${HTML_REPORT_DIR:-azure-html}
       - JSON_REPORT_FILE=${JSON_REPORT_FILE:-azure-report.json}
+      - DIV_SUMMARY_FILE=${DIV_SUMMARY_FILE:-azure-summary.txt}
+      - TEST_TITLE=${TEST_TITLE:-E2E Azure Tests}
     command: npm run test:docker
     networks:
       - e2e-azurite-network
