--- a/upload-server/docker-compose.e2e.minio-azurite.yml
+++ b/upload-server/docker-compose.e2e.minio-azurite.yml
@@ -53,6 +53,8 @@ services:
       - TEST_REPORTS_DIR=/playwright/test-reports
       - HTML_REPORT_DIR=${HTML_REPORT_DIR:-aws-to-azure-html}
       - JSON_REPORT_FILE=${JSON_REPORT_FILE:-aws-to-azure-report.json}
+      - DIV_SUMMARY_FILE=${DIV_SUMMARY_FILE:-aws-to-azure-summary.txt}
+      - TEST_TITLE=${TEST_TITLE:-E2E AWS -> Azure Tests}
     command: npm run test:docker
     networks:
       - e2e-minio-azurite-network
