--- a/upload-server/docker-compose.e2e.minio.yml
+++ b/upload-server/docker-compose.e2e.minio.yml
@@ -46,6 +46,8 @@ services:
       - TEST_REPORTS_DIR=/playwright/test-reports
       - HTML_REPORT_DIR=${HTML_REPORT_DIR:-aws-html}
       - JSON_REPORT_FILE=${JSON_REPORT_FILE:-aws-report.json}
+      - DIV_SUMMARY_FILE=${DIV_SUMMARY_FILE:-aws-summary.txt}
+      - TEST_TITLE=${TEST_TITLE:-E2E AWS Tests}
     command: npm run test:docker
     networks:
       - e2e-minio-network
