--- a/upload-server/configs/local/deliver.yml
+++ b/upload-server/configs/local/deliver.yml
@@ -54,6 +54,7 @@ routing_groups:
     data_stream_route: csv
     delivery_targets:
       - name: ncird
+        path_template: covid-all-monthly-vaccination-csv/{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}
   - data_stream_id: generic-immunization
     data_stream_route: csv
     delivery_targets:
@@ -63,6 +64,7 @@ routing_groups:
     data_stream_route: csv
     delivery_targets:
       - name: ncird
+        path_template: influenza-vaccination-csv/{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}
   - data_stream_id: routine-immunization
     data_stream_route: other
     delivery_targets:
@@ -72,6 +74,7 @@ routing_groups:
     data_stream_route: csv
     delivery_targets:
       - name: ncird
+        path_template: rsv-prevention-csv/{{.Year}}/{{.Month}}/{{.Day}}/{{.Filename}}
   - data_stream_id: dextesting
     data_stream_route: testevent1
     delivery_targets:
