--- a/upload-server/docker-compose.e2e.all.yml
+++ b/upload-server/docker-compose.e2e.all.yml
@@ -48,7 +48,7 @@ services:
       - TEST_REPORTS_DIR=/playwright/test-reports
       - HTML_REPORT_DIR=${HTML_REPORT_DIR:-fs-to-azure-aws-html}
       - JSON_REPORT_FILE=${JSON_REPORT_FILE:-fs-to-azure-aws-report.json}
-      - DIV_SUMMARY_FILE=${DIV_SUMMARY_FILE:-fs-to-azure-aws-summary.txt}
+      - SUMMARY_JSON_REPORT_FILE=${SUMMARY_JSON_REPORT_FILE:-fs-to-azure-aws-summary.json}
       - TEST_TITLE=${TEST_TITLE:-E2E FS -> Azure & AWS Tests}
     command: npm run test:docker
     networks:
