--- a/upload-server/docker-compose.e2e.azurite.yml
+++ b/upload-server/docker-compose.e2e.azurite.yml
@@ -43,7 +43,7 @@ services:
       - TEST_REPORTS_DIR=/playwright/test-reports
       - HTML_REPORT_DIR=${HTML_REPORT_DIR:-azure-html}
       - JSON_REPORT_FILE=${JSON_REPORT_FILE:-azure-report.json}
-      - DIV_SUMMARY_FILE=${DIV_SUMMARY_FILE:-azure-summary.txt}
+      - SUMMARY_JSON_REPORT_FILE=${SUMMARY_JSON_REPORT_FILE:-azure-summary.json}
       - TEST_TITLE=${TEST_TITLE:-E2E Azure Tests}
     command: npm run test:docker
     networks:
