--- a/upload-server/docker-compose.e2e.minio.yml
+++ b/upload-server/docker-compose.e2e.minio.yml
@@ -46,7 +46,7 @@ services:
       - TEST_REPORTS_DIR=/playwright/test-reports
       - HTML_REPORT_DIR=${HTML_REPORT_DIR:-aws-html}
       - JSON_REPORT_FILE=${JSON_REPORT_FILE:-aws-report.json}
-      - DIV_SUMMARY_FILE=${DIV_SUMMARY_FILE:-aws-summary.txt}
+      - SUMMARY_JSON_REPORT_FILE=${SUMMARY_JSON_REPORT_FILE:-aws-summary.json}
       - TEST_TITLE=${TEST_TITLE:-E2E AWS Tests}
     command: npm run test:docker
     networks:
