--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -31,7 +31,7 @@ services:
       - TEST_REPORTS_DIR=/playwright/test-reports
       - HTML_REPORT_DIR=${HTML_REPORT_DIR:-fs-html}
       - JSON_REPORT_FILE=${JSON_REPORT_FILE:-fs-report.json}
-      - DIV_SUMMARY_FILE=${DIV_SUMMARY_FILE:-fs-summary.txt}
+      - SUMMARY_JSON_REPORT_FILE=${SUMMARY_JSON_REPORT_FILE:-fs-summary.json}
       - TEST_TITLE=${TEST_TITLE:-E2E FS Tests}
     command: npm run test:docker
     networks:
