--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -45,6 +45,12 @@ jobs:
           --exit-code-from upload-server
       - name: Show coverage
         run: go tool cover -func=c.out
+  e2e-tests:
+    uses: ./.github/workflows/e2e-tests.yml
+    with:
+      BRANCH_NAME: ${{ github.head_ref }}
+      RUN_ID: ${{ github.run_id }}
+    secrets: inherit
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
     with:
