--- a/.github/workflows/e2e-test-template.yml
+++ b/.github/workflows/e2e-test-template.yml
@@ -9,9 +9,6 @@ on:
       COMPOSE_FILENAME:
         type: string
         required: true
-      STORAGE_TYPE:
-        type: string
-        required: true
 
 defaults:
   run:
@@ -23,18 +20,22 @@ jobs:
     continue-on-error: true
     env:
       CI: true
-      AZURITE_STORAGE_KEY: ${{ (inputs.STORAGE_TYPE == 'azure') && secrets.AZURITE_STORAGE_KEY }}
+      AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
     steps:
       - uses: actions/checkout@v4
       - name: Install podman compose
         run: pip3 install podman-compose
       - name: Run E2E Tests
         id: test
-        run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} up --build --exit-code-from playwright --abort-on-container-exit
+        run:
+          podman-compose -f ${{ inputs.COMPOSE_FILENAME }} up --build --exit-code-from playwright
+          --abort-on-container-exit
       - name: Test Report
         # Piping the logs through perl so that we can append the TEST_TITLE to make where they are coming from clearer
         # The only annotation types produced by the `github` report are 'debug', 'notice', 'warning', and 'error' so this should cover them all
-        run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} logs -f playwright | perl -pe 's/::(debug|notice|warning|error) title=/$&\[${{ inputs.TEST_TITLE }}\] /g'
+        run:
+          podman-compose -f ${{ inputs.COMPOSE_FILENAME }} logs -f playwright | perl -pe
+          's/::(debug|notice|warning|error) title=/$&\[${{ inputs.TEST_TITLE }}\] /g'
       - name: Tear Down Containers
         run: podman-compose -f ${{ inputs.COMPOSE_FILENAME }} down
     outputs:
