--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -1,10 +1,11 @@
-name: "CI - Upload Server"
+name: 'CI - Upload Server'
 
 on:
   workflow_dispatch:
   pull_request:
     paths:
       - upload-server/**
+      - tests/**
 
 defaults:
   run:
@@ -38,32 +39,46 @@ jobs:
       - name: Install podman compose
         run: pip3 install podman-compose
       - name: Run Tests
-        run: podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f docker-compose.minio.yml -f docker-compose.localstack.yml -f docker-compose.testing.yml up --exit-code-from upload-server
+        run:
+          podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f
+          docker-compose.minio.yml -f docker-compose.localstack.yml -f docker-compose.testing.yml up
+          --exit-code-from upload-server
       - name: Show coverage
         run: go tool cover -func=c.out
   e2e-tests-fs:
-    name: E2E Tests - File System Storage
+    name: E2E Tests - File System Storage to File System Destinations
     uses: ./.github/workflows/e2e-test-template.yml
     with:
       TEST_TITLE: E2E FS Tests
-      STORAGE_TYPE: fs
       COMPOSE_FILENAME: ./docker-compose.e2e.yml
     secrets: inherit
   e2e-tests-azure:
-    name: E2E Tests - Azure Blob Storage
+    name: E2E Tests - Azure Blob Storage to Azure Blob Destinations
     uses: ./.github/workflows/e2e-test-template.yml
     with:
       TEST_TITLE: E2E Azure Tests
       COMPOSE_FILENAME: ./docker-compose.e2e.azurite.yml
-      STORAGE_TYPE: azure
     secrets: inherit
   e2e-tests-aws:
-    name: E2E Tests - AWS S3 Storage
+    name: E2E Tests - AWS S3 Storage to AWS S3 Destinations
     uses: ./.github/workflows/e2e-test-template.yml
     with:
       TEST_TITLE: E2E AWS Tests
       COMPOSE_FILENAME: ./docker-compose.e2e.minio.yml
-      STORAGE_TYPE: aws
+    secrets: inherit
+  e2e-tests-mix:
+    name: E2E Tests - File System Storage to Azure Blob and AWS S3 Destinations
+    uses: ./.github/workflows/e2e-test-template.yml
+    with:
+      TEST_TITLE: E2E Mix Tests
+      COMPOSE_FILENAME: ./docker-compose.e2e.all.yml
+    secrets: inherit
+  e2e-tests-aws-azure:
+    name: E2E Tests - AWS S3 Storage to Azure Blob Destinations
+    uses: ./.github/workflows/e2e-test-template.yml
+    with:
+      TEST_TITLE: E2E AWS to Azure Tests
+      COMPOSE_FILENAME: ./docker-compose.e2e.minio-azurite.yml
     secrets: inherit
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
