--- a/upload-server/configs/testing/minio_destinations.yml
+++ b/upload-server/configs/testing/minio_destinations.yml
@@ -7,7 +7,7 @@ targets:
     bucket_name: edav
     access_key_id: minioadmin
     secret_access_key: minioadmin
-    endpoint: 'http://minio:8000'
+    endpoint: "http://minio:8000"
     region: us-east-1
   ehdi:
     name: ehdi
@@ -15,22 +15,24 @@ targets:
     bucket_name: ehdi
     access_key_id: minioadmin
     secret_access_key: minioadmin
-    endpoint: 'http://minio:8000'
+    endpoint: "http://minio:8000"
     region: us-east-1
   eicr:
     name: eicr
-    type: az-blob
-    endpoint: 'http://azurite:10000/devstoreaccount1'
-    storage_account: 'devstoreaccount1'
-    storage_key: $AZURITE_KEY
-    container_name: eicr
+    type: s3
+    bucket_name: ehdi
+    access_key_id: minioadmin
+    secret_access_key: minioadmin
+    endpoint: "http://minio:8000"
+    region: us-east-1
   ncird:
     name: ncird
-    type: az-blob
-    endpoint: 'http://azurite:10000/devstoreaccount1'
-    storage_account: 'devstoreaccount1'
-    storage_key: $AZURITE_KEY
-    container_name: ncird
+    type: s3
+    bucket_name: ehdi
+    access_key_id: minioadmin
+    secret_access_key: minioadmin
+    endpoint: "http://minio:8000"
+    region: us-east-1
 routing_groups:
   - data_stream_id: pulsenet
     data_stream_route: localsequencefile
