--- a/upload-server/docker-compose.e2e.all.yml
+++ b/upload-server/docker-compose.e2e.all.yml
@@ -28,10 +28,6 @@ services:
       - UPLOAD_CONFIG_PATH=/upload-configs
       - DEX_DELIVERY_CONFIG_FILE=/code/configs/testing/e2e/mix_destinations.yml
       - AZURITE_KEY=${AZURITE_STORAGE_KEY}
-      - EDAV_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EHDI_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EICR_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - NCIRD_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
     command: /bin/sh -c "./run-server.sh"
     networks:
       - e2e-all-network
@@ -42,14 +38,18 @@ services:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     container_name: playwright-all
     volumes:
-      - ../tests/smoke/playwright:/app
-      - /app/node_modules
-    working_dir: /app
+      - ../tests/smoke/playwright:/playwright
+      - /playwright/node_modules
+    working_dir: /playwright
     environment:
       - CI
       - SERVER_URL=http://upload-server-all:8080
       - UI_URL=http://upload-server-all:8081
-      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-all-test-report.json}
+      - TEST_REPORTS_DIR=/playwright/test-reports
+      - HTML_REPORT_DIR=${HTML_REPORT_DIR:-fs-to-azure-aws-html}
+      - JSON_REPORT_FILE=${JSON_REPORT_FILE:-fs-to-azure-aws-report.json}
+      - SUMMARY_JSON_REPORT_FILE=${SUMMARY_JSON_REPORT_FILE:-fs-to-azure-aws-summary.json}
+      - TEST_TITLE=${TEST_TITLE:-E2E FS -> Azure & AWS Tests}
     command: npm run test:docker
     networks:
       - e2e-all-network
