--- a/upload-server/docker-compose.e2e.minio.yml
+++ b/upload-server/docker-compose.e2e.minio.yml
@@ -27,10 +27,6 @@ services:
       - AWS_SECRET_ACCESS_KEY=minioadmin
       - DEX_MANIFEST_CONFIG_FOLDER_NAME=upload-configs
       - DEX_DELIVERY_CONFIG_FILE=/code/configs/testing/e2e/minio_destinations.yml
-      - EDAV_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EHDI_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EICR_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - NCIRD_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
     command: /bin/sh -c "./run-server.sh"
     networks:
       - e2e-minio-network
@@ -40,14 +36,18 @@ services:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     container_name: playwright-minio
     volumes:
-      - ../tests/smoke/playwright:/app
-      - /app/node_modules
-    working_dir: /app
+      - ../tests/smoke/playwright:/playwright
+      - /playwright/node_modules
+    working_dir: /playwright
     environment:
       - CI
       - SERVER_URL=http://upload-server-minio:8080
       - UI_URL=http://upload-server-minio:8081
-      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-minio-test-report.json}
+      - TEST_REPORTS_DIR=/playwright/test-reports
+      - HTML_REPORT_DIR=${HTML_REPORT_DIR:-aws-html}
+      - JSON_REPORT_FILE=${JSON_REPORT_FILE:-aws-report.json}
+      - SUMMARY_JSON_REPORT_FILE=${SUMMARY_JSON_REPORT_FILE:-aws-summary.json}
+      - TEST_TITLE=${TEST_TITLE:-E2E AWS Tests}
     command: npm run test:docker
     networks:
       - e2e-minio-network
