--- a/upload-server/docker-compose.e2e.yml
+++ b/upload-server/docker-compose.e2e.yml
@@ -14,10 +14,6 @@ services:
       - UI_SERVER_INTERNAL_HOST=upload-server-fs:8080
       - UPLOAD_CONFIG_PATH=/upload-configs
       - DEX_DELIVERY_CONFIG_FILE=/code/configs/testing/e2e/file_destinations.yml
-      - EDAV_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EHDI_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - EICR_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
-      - NCIRD_PATH_TEMPLATE='{{.Filename}}_{{.UploadId}}'
     command: /bin/sh -c "./run-server.sh"
     networks:
       - e2e-fs-network
@@ -25,14 +21,18 @@ services:
     image: mcr.microsoft.com/playwright:v1.48.0-focal
     container_name: playwright-fs
     volumes:
-      - ../tests/smoke/playwright:/app
-      - /app/node_modules
-    working_dir: /app
+      - ../tests/smoke/playwright:/playwright
+      - /playwright/node_modules
+    working_dir: /playwright
     environment:
       - CI
       - SERVER_URL=http://upload-server-fs:8080
       - UI_URL=http://upload-server-fs:8081
-      - TEST_REPORT_JSON=${TEST_REPORT_JSON:-fs-test-report.json}
+      - TEST_REPORTS_DIR=/playwright/test-reports
+      - HTML_REPORT_DIR=${HTML_REPORT_DIR:-fs-html}
+      - JSON_REPORT_FILE=${JSON_REPORT_FILE:-fs-report.json}
+      - SUMMARY_JSON_REPORT_FILE=${SUMMARY_JSON_REPORT_FILE:-fs-summary.json}
+      - TEST_TITLE=${TEST_TITLE:-E2E FS Tests}
     command: npm run test:docker
     networks:
       - e2e-fs-network
