Run fortefy scan on PRs only

--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -57,3 +57,4 @@ jobs:
       WORKFLOW: fortify.yml
       REF: ${{ github.head_ref }}
     secrets: inherit
+    if: github.event_name == 'pull_request'
