--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -1,4 +1,4 @@
-name: "CI - Upload Server"
+name: 'CI - Upload Server'
 
 on:
   workflow_dispatch:
@@ -50,6 +50,7 @@ jobs:
     with:
       BRANCH_NAME: ${{ github.head_ref }}
       RUN_ID: ${{ github.run_id }}
+      EVENT_TYPE: ${{ github.event_name }}
     secrets: inherit
   run-fortify-scan:
     uses: ./.github/workflows/remote-cd-trigger-template.yml
