--- a/.github/workflows/delete-playwright-reports.yml
+++ b/.github/workflows/delete-playwright-reports.yml
@@ -2,7 +2,7 @@
 name: Delete
 
 on:
-  # delete:
+  delete:
   workflow_dispatch:
     inputs:
       REF:
@@ -23,40 +23,29 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Contains all reports for deleted branch
-      GITHUB_REF_NAME: ${{ inputs.REF }} # TODO - change back to github.event.ref
-      PLAYWRIGHT_REPORTS_DIR: playwright-reports
-      BRANCH_REPORTS_DIR: null
-      BRANCH_REPORTS_EXIST: 'false'
+      BRANCH_NAME: ${{ inputs.REF }} # TODO - change back to github.event.ref
     steps:
       - name: Checkout GitHub Pages Branch
         uses: actions/checkout@v4
         with:
           ref: gh-pages
-      - name: Set Branch Report Directory
-        run: |
-          split=(${GITHUB_REF_NAME//\// })
-          echo BRANCH_REPORTS_DIR=${split[0]} >> $GITHUB_ENV
       - name: Set Git User
         # see: https://github.com/actions/checkout/issues/13#issuecomment-724415212
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      - name: Check for Branch Reports
-        run: |
-          if [ -z "$(ls -A $PLAYWRIGHT_REPORTS_DIR/$BRANCH_REPORTS_DIR)" ]; then
-            echo "BRANCH_REPORTS_EXIST="false"" >> $GITHUB_ENV
-          else
-            echo "BRANCH_REPORTS_EXIST="true"" >> $GITHUB_ENV
-          fi
       - name: Delete Reports for Branch
-        # if: ${{ env.BRANCH_REPORTS_EXIST == 'true' && github.event.ref_type == 'branch' }}
-        if: ${{ env.BRANCH_REPORTS_EXIST == 'true' }}
+        if: ${{ github.event.ref_type == 'branch' }}
         timeout-minutes: 3
+        working-directory: playwright-reports
         run: |
-          cd $PLAYWRIGHT_REPORTS_DIR
-          pwd
+          path=(${BRANCH_NAME//\// })
+          base_dir=${path[0]}
 
-          rm -rf $BRANCH_REPORTS_DIR
-          git add .
-          git commit -m "workflow: remove all reports for branch ${{ env.GITHUB_REF_NAME }}"
-          git push
+          if [ -z "$(ls -A $base_dir)" ]; then
+            rm -rf $base_dir
+            git add .
+
+            git commit -m "workflow: remove all reports for branch $BRANCH_NAME"
+            git pull origin gh-pages --rebase -s recursive -X ours
+          fi
