--- a/.github/workflows/push-to-gh-pages.yml
+++ b/.github/workflows/push-to-gh-pages.yml
@@ -12,10 +12,6 @@ on:
       COMMIT_MSG:
         type: string
         required: true
-      DELETE_EXISTING:
-        type: boolean
-        required: true
-        default: false
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -29,21 +25,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: gh-pages
-      - name: Set Git User
-        # see: https://github.com/actions/checkout/issues/13#issuecomment-724415212
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      - name: Check If Directory Already Exists
-        if: ${{ inputs.DELETE_EXISTING == true && inputs.DEPLOY_TO != '.' }}
-        env:
-          DEPLOY_TO: ${{ inputs.DEPLOY_TO }}
-        run: |
-          if [ -z "$(ls -A $DEPLOY_TO)" ]; then
-            cd $DEPLOY_TO/..
-
-            
-          fi
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
@@ -52,11 +33,14 @@ jobs:
       - name: Push to GitHub Pages Branch
         working-directory: ${{ inputs.DEPLOY_TO }}
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "${{ inputs.COMMIT_MSG }}"
+          git pull origin gh-pages --rebase -s recursive -X ours
           git push
       - run: |
-          if [[ ${{ inputs.DEPLOY_TO }} == . ]]; then
+          if [[ ${{ inputs.DEPLOY_TO }} == '.' ]]; then
             echo "Deployed to https://cdcgov.github.io/data-exchange-upload/" >> "$GITHUB_STEP_SUMMARY"
           else
             echo "Deployed to https://cdcgov.github.io/data-exchange-upload/${{ inputs.DEPLOY_TO }}" >> "$GITHUB_STEP_SUMMARY"
