--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -111,7 +111,10 @@ jobs:
             echo "deploy_to=${{ env.ARTIFACT_ID }}/main/" >> "$GITHUB_OUTPUT"
             echo "commit_msg='update Playwright report for main'" >> "$GITHUB_OUTPUT"
           else
-            echo "deploy_to=${{ env.ARTIFACT_ID }}/${{ inputs.BRANCH_NAME }}/${{ inputs.RUN_ID }}/" >> "$GITHUB_OUTPUT"
+            # Normalize the branch name to convert '/' to '_' so it doesn't create extra subdirectories
+            norm_branch=(${${{ inputs.BRANCH_NAME }}//\//_})
+
+            echo "deploy_to=${{ env.ARTIFACT_ID }}/$norm_branch/${{ inputs.RUN_ID }}/" >> "$GITHUB_OUTPUT"
             echo "commit_msg='add Playwright report for branch ${{ inputs.BRANCH_NAME }}, run-id ${{ inputs.RUN_ID }}'" >> "$GITHUB_OUTPUT"
           fi
 
