temp comment out e2e runs

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -25,18 +25,18 @@ jobs:
           - title: 'E2E FS Tests'
             name: 'fs-to-fs'
             compose: './docker-compose.e2e.yml'
-          - title: 'E2E Azure Tests'
-            name: 'azure-to-azure'
-            compose: './docker-compose.e2e.azurite.yml'
-          - title: 'E2E AWS Tests'
-            name: 'aws-to-aws'
-            compose: './docker-compose.e2e.minio.yml'
-          - title: 'E2E FS -> Azure & AWS Tests'
-            name: 'fs-to-azure-and-aws'
-            compose: './docker-compose.e2e.all.yml'
-          - title: 'E2E AWS -> Azure Tests'
-            name: 'aws-to-azure'
-            compose: './docker-compose.e2e.minio-azurite.yml'
+          # - title: 'E2E Azure Tests'
+          #   name: 'azure-to-azure'
+          #   compose: './docker-compose.e2e.azurite.yml'
+          # - title: 'E2E AWS Tests'
+          #   name: 'aws-to-aws'
+          #   compose: './docker-compose.e2e.minio.yml'
+          # - title: 'E2E FS -> Azure & AWS Tests'
+          #   name: 'fs-to-azure-and-aws'
+          #   compose: './docker-compose.e2e.all.yml'
+          # - title: 'E2E AWS -> Azure Tests'
+          #   name: 'aws-to-azure'
+          #   compose: './docker-compose.e2e.minio-azurite.yml'
     name: ${{ matrix.title }}
     runs-on: ubuntu-latest
     continue-on-error: true
