--- a/.github/workflows/tus-upload-server-ci.yml
+++ b/.github/workflows/tus-upload-server-ci.yml
@@ -12,39 +12,39 @@ defaults:
     working-directory: upload-server/
 
 jobs:
-  unit-test:
-    name: Unit Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.22.0
-      - name: Vet
-        run: go vet ./...
-      - name: Run Tests
-        run: go test -coverprofile=c.out -coverpkg=./... ./...
-      - name: Show coverage
-        run: go tool cover -func=c.out
-      - name: Build Check
-        run: go build -o upload-server ./cmd/main.go
-  simulation-test:
-    name: Simulation Test
-    runs-on: ubuntu-latest
-    env:
-      AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install podman compose
-        run: pip3 install podman-compose
-      - name: Run Tests
-        run:
-          podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f
-          docker-compose.minio.yml -f docker-compose.localstack.yml -f docker-compose.testing.yml up
-          --exit-code-from upload-server
-      - name: Show coverage
-        run: go tool cover -func=c.out
+  # unit-test:
+  #   name: Unit Test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Setup Go
+  #       uses: actions/setup-go@v4
+  #       with:
+  #         go-version: 1.22.0
+  #     - name: Vet
+  #       run: go vet ./...
+  #     - name: Run Tests
+  #       run: go test -coverprofile=c.out -coverpkg=./... ./...
+  #     - name: Show coverage
+  #       run: go tool cover -func=c.out
+  #     - name: Build Check
+  #       run: go build -o upload-server ./cmd/main.go
+  # simulation-test:
+  #   name: Simulation Test
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     AZURITE_STORAGE_KEY: ${{ secrets.AZURITE_STORAGE_KEY }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Install podman compose
+  #       run: pip3 install podman-compose
+  #     - name: Run Tests
+  #       run:
+  #         podman-compose -f docker-compose.yml -f docker-compose.azurite.yml -f
+  #         docker-compose.minio.yml -f docker-compose.localstack.yml -f docker-compose.testing.yml up
+  #         --exit-code-from upload-server
+  #     - name: Show coverage
+  #       run: go tool cover -func=c.out
   e2e-tests:
     uses: ./.github/workflows/e2e-tests.yml
     with:
@@ -52,9 +52,9 @@ jobs:
       RUN_ID: ${{ github.run_id }}
       EVENT_TYPE: ${{ github.event_name }}
     secrets: inherit
-  run-fortify-scan:
-    uses: ./.github/workflows/remote-cd-trigger-template.yml
-    with:
-      WORKFLOW: fortify.yml
-      REF: ${{ github.head_ref }}
-    secrets: inherit
+  # run-fortify-scan:
+  #   uses: ./.github/workflows/remote-cd-trigger-template.yml
+  #   with:
+  #     WORKFLOW: fortify.yml
+  #     REF: ${{ github.head_ref }}
+  #   secrets: inherit
