--- a/.github/workflows/delete-playwright-reports.yml
+++ b/.github/workflows/delete-playwright-reports.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
 
 # ensures that currently running Playwright workflow of deleted branch gets cancelled
-concurrency:
-  group: ${{ github.event.ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.event.ref }}
+#   cancel-in-progress: true
 
 jobs:
   delete_reports:
